--- a/bootstrap_practice/index.html
+++ b/bootstrap_practice/index.html
@@ -10,5 +10,81 @@
     <h1 class="text-success">Hello, world!</h1>
     <script src="js/jquery-3.3.1.slim.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+
+<h1>list2-8</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8">col-sm-8</div>
+        <div class="col-sm-4">col-sm-4</div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">col-sm</div>
+        <div class="col-sm">col-sm</div>
+        <div class="col-sm">col-sm</div>
+      </div>
+    </div>
+<!--  -->
+
+<h1>list2-9</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">col</div>
+    <div class="col-auto">col-auto : コンテンツによって幅が変化</div>
+    <div class="col">col</div>
+  </div>
+  <div class="row">
+    <div class="col">col</div>
+    <div class="col-md-auto">col-md-auto :Medium以上でコンテンツによって幅が可変</div>
+    <div class="col">col</div>
+  </div>
+</div>
+<!--  -->
+
+<h1>list2-10</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="w-100"></div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+  </div>
+</div>
+<!--  -->
+
+<h1>list2-11</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="w-100 d-none d-md-block"></div><!-- Medium以上では{display:block}、未満では{display:none} -->
+    <div class="col">col</div>
+    <div class="col">col</div>
+  </div>
+</div>
+<!--  -->
+
+<h1>list2-12</h1>
+<h3>ベース :全幅+半幅カラム、Medium以上　：8列+4列カラム</h3>
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-md-8">colとcol-md-8</div>
+    <div class="col-6 col-md-4">col-6とcol-md-4</div>
+  </div>
+</div>
+
+<h3>ベース　：半幅カラム×3、Medium以上　：4列カラム×3</h3>
+<div class="container">
+  <div class="row">
+    <div class="col-6 col-md-4">col-6とcol-md-4</div>
+    <div class="col-6 col-md-4">col-6とcol-md-4</div>
+    <div class="col-6 col-md-4">col-6とcol-md-4</div>
+  </div>
+</div>
+<!--  -->
+
+
   </body>
 </html>
