--- a/bootstrap_practice/index.html
+++ b/bootstrap_practice/index.html
@@ -11,23 +11,31 @@
     <script src="js/jquery-3.3.1.slim.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 
-<h1>list2-8</h1>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-8">col-sm-8</div>
-        <div class="col-sm-4">col-sm-4</div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">col-sm</div>
-        <div class="col-sm">col-sm</div>
-        <div class="col-sm">col-sm</div>
-      </div>
-    </div>
+
+<div class="container">
+  <div class="row">
+    <div class="col">col</div>
+  </div>
+</div>
+
+
+<h2>list2-8</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8">col-sm-8</div>
+    <div class="col-sm-4">col-sm-4</div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">col-sm</div>
+    <div class="col-sm">col-sm</div>
+    <div class="col-sm">col-sm</div>
+  </div>
+</div>
 <!--  -->
 
-<h1>list2-9</h1>
+<h2>list2-9</h2>
 <div class="container">
   <div class="row">
     <div class="col">col</div>
@@ -42,7 +50,7 @@
 </div>
 <!--  -->
 
-<h1>list2-10</h1>
+<h2>list2-10</h2>
 <div class="container">
   <div class="row">
     <div class="col">col</div>
@@ -54,7 +62,7 @@
 </div>
 <!--  -->
 
-<h1>list2-11</h1>
+<h2>list2-11</h2>
 <div class="container">
   <div class="row">
     <div class="col">col</div>
@@ -66,7 +74,7 @@
 </div>
 <!--  -->
 
-<h1>list2-12</h1>
+<h2>list2-12</h2>
 <h3>ベース :全幅+半幅カラム、Medium以上　：8列+4列カラム</h3>
 <div class="container">
   <div class="row">
@@ -81,6 +89,82 @@
     <div class="col-6 col-md-4">col-6とcol-md-4</div>
     <div class="col-6 col-md-4">col-6とcol-md-4</div>
     <div class="col-6 col-md-4">col-6とcol-md-4</div>
+  </div>
+</div>
+<!--  -->
+
+<h2>list2-13</h2>
+<h3>垂直上揃え　：align-items-start</h3>
+<div class="container">
+  <div class="row align-items-start">
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+  </div>
+</div>
+
+<h3>垂直中央揃え　：align-items-center</h3>
+<div class="container">
+  <div class="row align-items-center">
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+  </div>
+</div>
+
+<h3>垂直下揃え　：align-items-end</h3>
+<div class="container">
+  <div class="row align-items-end">
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+  </div>
+</div>
+<!--  -->
+
+<h2>list2-14</h2>
+<div class =" container">
+  <div class =" row">
+    <div class =" col align-self-start"> align-self-start </div><!-- 垂直 上 揃え -->
+    <div class =" col align-self-center"> align-self-center </div><!-- 垂直 中央 揃え -->
+    <div class =" col align-self-end"> align-self-end </div><!-- 垂 直下 揃え -->
+  </div>
+</div>
+
+<h2>list2-15</h2>
+<h3>水平左揃え　：jutify-content:flex-start</h3>
+<div class="container">
+  <div class="row justify-content-start">
+    <div class="col-4">col-4</div>
+    <div class="col-4">col-4</div>
+  </div>
+</div>
+<h3>水平中央揃え　：jutify-content:flex-center</h3>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-4">col-4</div>
+    <div class="col-4">col-4</div>
+  </div>
+</div>
+<h3>水平右揃え　：jutify-content:flex-end</h3>
+<div class="container">
+  <div class="row justify-content-end">
+    <div class="col-4">col-4</div>
+    <div class="col-4">col-4</div>
+  </div>
+</div>
+<h3>等間隔揃え　：jutify-content:flex-around</h3>
+<div class="container">
+  <div class="row justify-content-around">
+    <div class="col-4">col-4</div>
+    <div class="col-4">col-4</div>
+  </div>
+</div>
+<h3>両端から均等に配置　：jutify-content:flex-between</h3>
+<div class="container">
+  <div class="row justify-content-between">
+    <div class="col-4">col-4</div>
+    <div class="col-4">col-4</div>
   </div>
 </div>
 <!--  -->
